--- a/Home.css
+++ b/Home.css
@@ -199,7 +199,7 @@ footer video {
 	filter: blur(10px);
 	
 }
-
+}
 
 
 	.footer-content {
@@ -322,3 +322,4 @@ footer video {
 .social-icons li a:hover {
     color: cyan;
 }
+
