--- a/Home.css
+++ b/Home.css
@@ -6,6 +6,16 @@
     font-family: 'Poppins', sans-serif;
 }
 
+#bg-video {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+  z-index: -1;
+}
+
 /* Full-Screen Video Background */
 #myVideo {
     position: fixed;
@@ -263,3 +273,4 @@ footer video {
 .social-icons li a:hover {
     color: cyan;
 }
+
