--- a/Home.css
+++ b/Home.css
@@ -225,7 +225,11 @@ footer {
     overflow: hidden;
     margin-top: 100px;
     z-index: 2;
-    background: linear-gradient(to bottom, #f4f4f4, transparent);
+    background: linear-gradient(
+    to bottom,
+    rgba(0,0,0,0.6),
+    rgba(0,0,0,0.2));
+
 }
 
 footer video {
@@ -303,6 +307,7 @@ footer video {
 .social-icons li a:hover {
     color: cyan;
 }
+
 
 
 
