--- a/Home.css
+++ b/Home.css
@@ -191,7 +191,7 @@ nav ul li a:hover {
 	width: 100%;
 	height: 200px; /* Adjust height as needed */
 	overflow: hidden;
-	background: linear-gradient(to bottom, #f4f4f4, transparent);
+	background: linear-gradient(to bottom, #5591e0,  transparent 10%);
 		}
 footer {
 	position: relative;
@@ -210,7 +210,7 @@ footer video {
     height: 100%;
     object-fit: cover;
     z-index: -1;
-    filter: blur(10px);
+    filter: blur(2px);
 	
 }
 
